tests/error/modifier_errors/pytket_w_collapse.err
Error: Signature mismatch (at $FILE:9:0)
  | 
7 | 
8 | @guppy.pytket(circ)
9 | def guppy_circ(q: qubit) -> bool: ...
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Signature `guppy_circ` doesn't match provided circuit

Note: Expected circuit signature is `qubit -> None`

Guppy compilation failed due to 1 previous error
